# tree-data-convert

./: .gitignore  README.md  app.py  config.yaml  db_tools.py  demo.xlsx  excel_reader.py  main.py  menu_data_processor.py  menu_data_processor_v1.py  pyproject.toml  tdc.py  tree_node.py
ui-vue/: README.md  package.json
ui-vue/src/: App.vue  main.js
ui-vue/src/views/: HomeView.vue
